Render uploaded image

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -5,8 +5,8 @@
   </p>
 
   <p>
-    <strong>Image url:</strong>
-    <%= item.image_url %>
+    <strong>Image</strong>
+    <img src="<%= item.image_url %>" alt="Image">
   </p>
 
   <p>
