--- a/app/views/outfits/_outfit.html.erb
+++ b/app/views/outfits/_outfit.html.erb
@@ -1,9 +1,8 @@
 <div id="<%= dom_id outfit %>">
   <p>
-    <strong>Image url:</strong>
-    <%= outfit.image_url %>
+    <strong>Image</strong>
+    <img src="<%= outfit.image_url %>" alt="Image">
   </p>
-
   <p>
     <strong>Compliments:</strong>
     <%= outfit.compliments %>
