--- a/app/views/outfits/_form.html.erb
+++ b/app/views/outfits/_form.html.erb
@@ -11,21 +11,21 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="form-group">
     <%= form.label :image, style: "display: block" %>
-    <%= form.file_field :image %>
+    <%= form.file_field :image, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :compliments, style: "display: block" %>
-    <%= form.text_field :compliments %>
+    <%= form.text_field :compliments, class: "form-control" %>
   </div>
 
   <div>
     <%= form.number_field :user_id, value: current_user.id, hidden: true %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="btn btn-primary">
+    <%= form.submit "Add Outfit", class: "btn btn-primary" %>
   </div>
 <% end %>
