--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
               <li><%= link_to "Login", new_user_session_path, class: "dropdown-item"%></li>
             <% else %>
               <li><%= link_to "Edit Account", edit_user_registration_path, class: "dropdown-item"%></li>
-              <li><%= link_to "Logout", destroy_user_session_path, class: "dropdown-item"%></li>
+              <li><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item"%></li>
             <% end %>
           </ul>
         </li>
