--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,14 +1,28 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Items</h1>
+<div class="table-responsive">
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Image</th>
+        <th scope="col">Size</th>
+        <th scope="col">Likes</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @items.each do |item| %>
+        <tr>
+          <th scope="row"><%= item.name %></th>
+          <td><img src="<%= item.image_url %>" alt="Image" class="img-fluid"></td>
+          <td><%= item.size %></td>
+          <td><%= item.compliments%></td>
+        </tr>
 
-<div id="items">
-  <% @items.each do |item| %>
-    <%= render item %>
-    <p>
-      <%= link_to "Show this item", item %>
-    </p>
-  <% end %>
+        <%# <%= link_to "Show this item", item %>
+      <% end %>
+    </tbody>
+  </table>
 </div>
-
 <%= link_to "New item", new_item_path %>
