Style categories and incorporate form inside table

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,13 +4,26 @@
 
 <div>
 
-  <% @item.categories.map do |category| %>
-    <%= category.name %>,
-  <% end %>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Category</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @item.categories.map do |category| %>
+        <tr>
+          <th scope="row"><%= category.name %></th>
 
-  <%= render "shared/add_category_to_item_form" %>
-
-  <%= link_to "Edit this item", edit_item_path(@item) %> |
+          <td><%= button_to "Remove Category", category, method: :delete %></td>
+        </tr>
+      <% end %>
+      <tr>
+        <%= render "shared/add_category_to_item_form" %> 
+      </tr>
+    </tbody>
+  </table>
   <%= link_to "Back to items", items_path %>
 
   <%= button_to "Destroy this item", @item, method: :delete %>
