--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,40 +4,67 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <div class="form-group">
+      <%= f.label :name, style: "display: block" %>
+      <%= f.text_field :name, class: "form-control", required: true,autofocus: true%>
+    </div>
+    <div class="form-group">
+      <%= f.label :username, style: "display: block" %>
+      <%= f.text_field :username,
+                required: true,
+                autofocus: true,
+                 class: "form-control"%>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email, style: "display: block" %>
+      <%= f.email_field :email,
+                required: true,
+                autofocus: true,
+                class: "form-control"%>
+    </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :name,
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <%= f.label :password, style: "display: block" %>
+          <%= f.password_field :password,
                 required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :username,
+                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                 class: "form-control" %>
+        </div>
+        <small class="form-text text-muted">leave it blank if you don't want to change it</small>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <%= f.label :password_confirmation, style: "display: block" %>
+          <%= f.password_field :password_confirmation,
                 required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
+                 class: "form-control" %>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :current_password, style: "display: block" %>
+      <%= f.password_field :current_password,
                 hint: "we need your current password to confirm your changes",
                 required: true,
-                input_html: { autocomplete: "current-password" } %>
+                class: "form-control" %>
+    </div>
+    <small class="form-text text-muted">we need your current password to confirm your changes.</small>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "Update", class: "btn btn-primary"%>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: "btn btn-secondary" %></div>
 
 <%= link_to "Back", :back %>
