--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,31 +2,48 @@
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
+  <div class="form-group">
+    <%= f.label :name, style: "display: block" %>
+    <%= f.text_field :name, class: "form-control", required: true,autofocus: true%>
+  </div>
+  <div class="form-group">
+    <%= f.label :username, style: "display: block" %>
+    <%= f.text_field :username,
+                required: true,
+                autofocus: true,
+                 class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= f.label :email, style: "display: block" %>
+    <%= f.email_field :email,
+                required: true,
+                autofocus: true,
+                class: "form-control"%>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :username,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="form-group">
+        <%= f.label :password, style: "display: block" %>
+        <%= f.password_field :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
+                 class: "form-control" %>
+      </div>
+    </div>
+    <div class="col">
+      <div class="form-group">
+        <%= f.label :password_confirmation, style: "display: block" %>
+        <%= f.password_field :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                 class: "form-control" %>
+      </div>
+    </div>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
 
