Add ransack to nav form and a ransackable_attributes function to the item model

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,10 +32,10 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <%= search_form_for @q, class:"d-flex" do |f| %>
+        <%= f.text_field :name_cont ,class: "form-control me-2", placeholder: "Search" %>
+        <%= f.submit :class => "btn btn-outline-success" %>
+      <% end %>
     </div>
   </div>
 </nav>
