--- a/app/views/outfits/show.html.erb
+++ b/app/views/outfits/show.html.erb
@@ -19,7 +19,7 @@
         <tr>
           <th scope="row"><%= item.name %></th>
 
-          <td><%= button_to "Remove Item", item, method: :delete %></td>
+          <td><%= button_to "Remove Item", remove_item_outfit_path(@outfit, item_id: item.id), method: :delete, data: { confirm: "Are you sure?" } %></td>
         </tr>
       <% end %>
       <tr>
