--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,11 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Items</h1>
+
+<div class="d-flex justify-content-between align-items-center"">
+  <h1>Items</h1>
+  <%= link_to "New item", new_item_path, class: "btn btn-primary" %>
+</div>
+
 <div class="table-responsive">
   <table class="table">
     <thead class="thead-dark">
@@ -9,6 +14,7 @@
         <th scope="col">Image</th>
         <th scope="col">Size</th>
         <th scope="col">Likes</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
@@ -18,11 +24,11 @@
           <td><img src="<%= item.image_url %>" alt="Image" class="img-fluid"></td>
           <td><%= item.size %></td>
           <td><%= item.compliments%></td>
+          <td><%= link_to "Show this item", item %></td>
         </tr>
 
-        <%# <%= link_to "Show this item", item %>
+        
       <% end %>
     </tbody>
   </table>
 </div>
-<%= link_to "New item", new_item_path %>
