--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -1,6 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Outfits</h1>
+
+<div class="d-flex justify-content-between align-items-center"">
+  <h1>Outfits</h1>
+  <%= link_to "New outfit", new_outfit_path, class: "btn btn-primary" %>
+</div>
 
 <div class="table-responsive">
   <table class="table">
@@ -9,6 +13,7 @@
         <th scope="col">Image</th>
         <th scope="col">Items</th>
         <th scope="col">Likes</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
@@ -16,11 +21,7 @@
       <% @outfits.each do |outfit| %>
       
         <tr>
-          <td>
-            <%= link_to outfit_path(outfit) do %>
-              <img src="<%= outfit.image_url %>" alt="Image" class="img-fluid">
-            <% end %>
-          </td>
+          <td><img src="<%= outfit.image_url %>" alt="Image" class="img-fluid"> </td>
           <td>
             <% outfit.items.map do |item|%>
               <%= link_to item_path(item) do %>
@@ -29,10 +30,9 @@
             <% end %>
           </td>
           <td><%= outfit.compliments%></td>
+          <td><%= link_to "Show this outfit", outfit %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
 </div>
-
-<%= link_to "New outfit", new_outfit_path %>
